--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -33,6 +33,9 @@
                                 <a class="nav-link" href="{{ url_for('main.health_data') }}">My Health Data</a>
                             </li>
                             <li class="nav-item">
+                                <a class="nav-link" href="{{ url_for('medical_history.manage_medical_history') }}">Medical History</a>
+                            </li>
+                            <li class="nav-item">
                                 <a class="nav-link" href="{{ url_for('main.access_requests') }}">Access Requests</a>
                             </li>
                         {% endif %}
