--- a/app/templates/medical_history/edit.html
+++ b/app/templates/medical_history/edit.html
@@ -4,34 +4,54 @@
 {% block content %}
 <div class="container mt-4">
     <h2>{{ title }}</h2>
-    <div class="row">
-        <div class="col-md-6">
-            <form action="" method="post" novalidate>
+    <div class="card">
+        <div class="card-body">
+            <form method="POST" action="{{ url_for('medical_history.edit_surgery', surgery_id=surgery.id) }}">
                 {{ form.hidden_tag() }}
-                <div class="form-group mb-3">
-                    {{ form.illness_name.label(class_='form-label') }}
-                    {{ form.illness_name(class_='form-control') }}
-                    {% for error in form.illness_name.errors %}
-                        <span class="text-danger">[{{ error }}]</span>
+                
+                <div class="form-group">
+                    {{ form.surgery_name.label(class="form-label") }}
+                    {{ form.surgery_name(class="form-control") }}
+                    {% for error in form.surgery_name.errors %}
+                        <div class="text-danger">{{ error }}</div>
                     {% endfor %}
                 </div>
-                <div class="form-group mb-3">
-                    {{ form.diagnosis_date.label(class_='form-label') }}
-                    {{ form.diagnosis_date(class_='form-control') }}
-                     {% for error in form.diagnosis_date.errors %}
-                        <span class="text-danger">[{{ error }}]</span>
+
+                <div class="form-group">
+                    {{ form.surgery_date.label(class="form-label") }}
+                    {{ form.surgery_date(class="form-control") }}
+                    {% for error in form.surgery_date.errors %}
+                        <div class="text-danger">{{ error }}</div>
                     {% endfor %}
                 </div>
-                <div class="form-group mb-3">
-                    {{ form.treatment_details.label(class_='form-label') }}
-                    {{ form.treatment_details(class_='form-control', rows=3) }}
-                     {% for error in form.treatment_details.errors %}
-                        <span class="text-danger">[{{ error }}]</span>
+
+                <div class="form-group">
+                    {{ form.surgeon.label(class="form-label") }}
+                    {{ form.surgeon(class="form-control") }}
+                    {% for error in form.surgeon.errors %}
+                        <div class="text-danger">{{ error }}</div>
                     {% endfor %}
                 </div>
-                <div class="form-group mb-3">
+
+                <div class="form-group">
+                    {{ form.hospital.label(class="form-label") }}
+                    {{ form.hospital(class="form-control") }}
+                    {% for error in form.hospital.errors %}
+                        <div class="text-danger">{{ error }}</div>
+                    {% endfor %}
+                </div>
+
+                <div class="form-group">
+                    {{ form.details.label(class="form-label") }}
+                    {{ form.details(class="form-control", rows="3") }}
+                    {% for error in form.details.errors %}
+                        <div class="text-danger">{{ error }}</div>
+                    {% endfor %}
+                </div>
+
+                <div class="mt-3">
+                    {{ form.submit(class="btn btn-primary") }}
                     <a href="{{ url_for('medical_history.manage_medical_history') }}" class="btn btn-secondary">Cancel</a>
-                    {{ form.submit(class_='btn btn-primary') }}
                 </div>
             </form>
         </div>
