--- a/app/templates/email/reset_password.html
+++ b/app/templates/email/reset_password.html
@@ -8,7 +8,7 @@
     
     <p>To reset your password, please click the following link:</p>
     <p>
-        <a href="{{ url_for('auth.reset_password', token=token, _external=True, _scheme='https') }}">
+        <a href="{{ reset_url }}">
             Click here to reset your password
         </a>
     </p>
